--- a/index.html
+++ b/index.html
@@ -11,8 +11,30 @@
 <div class =" container-fluid text-centre" id="intro">
 
   <img src="img/assets/logoBig.png" alt="web page logo" class="centre">
-    <!-- <h1 id="hat">We provide the <strong>Best Food</strong> at the <strong>Right Price.</strong></h1> -->
+    <h1 id="hat">We provide the <strong>Best Food</strong> at the <strong>Right Price.</strong></h1>
  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3" id="skrr">
+      <div class="row" id="r1">
+        <p class="text2">Happy hour</p>
+      </div>
+        <div class="row" id="r2">
+          <p class="text2">Party time</p>
+        </div>
+    </div>
+      <div class="col-md-3" id="bfast">
+        <p class="text">Breakfast</p>
+
+      </div>
+        <div class="col-md-3" id="lunch">
+          <p class="text">Lunch</p>
+        </div>
+          <div class="col-md-3" id="dinner">
+            <p class="text">Dinner</p>
+          </div>
+  </div>
 </div>
 <div class="container" id="strop">
   <div class="row">
@@ -44,6 +66,14 @@
   </div>
     </div>
   <div>
+    <div class="container-fluid text-centre" id="infix">
+      <div class="flex-container">
+        <div>Fastfood</div>
+        <div>Drinks</div>
+        <div>Chicken</div>
+        <div>Rice</div>
+      </div>
+    </div>
 
 </body>
 </html>
